# mnist-cnn

./: .gitignore  Cargo.toml  index.html
mnist-model/: config.json
mnist-model/checkpoint/: model-7.mpk  model-8.mpk  optim-7.mpk  optim-8.mpk
pkg/: mnist_cnn.d.ts  mnist_cnn.js  mnist_cnn_bg.wasm.d.ts  package.json
src/: lib.rs  model.rs
