[package]
name = "mnist-cnn"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.16", default-features = false }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2"}
log = "0.4.25"

wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
default = ["ndarray"]

